@@ -1,6 +1,7 @@
 Changes between 2.1.1 and [NEXT VERSION]
 ----------------------------------------
 
+- fix issue69 / assertion rewriting fixed on some boolean operations
 - fix issue68 / packages now work with assertion rewriting
 - fix issue66: use different assertion rewriting caches when the -O option is passed
 
